apps/applications/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    app: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: automation
