apps/applications/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: automation
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8123
